--- a/company.html
+++ b/company.html
@@ -23,74 +23,7 @@
 
 <body class="fade-box">
 <!---------------ナビゲーション------------------>
-<div class="nav_bg"></div>
-<header>
-  
-  <div class="flex header_wrap">
-    <div><a href="index.html#" class="top_logo"><img src="img/logo.png" alt="株式会社ライジングイノベーション"></a></div>
-    <nav class="main_navigation">
-      <ul class="flex">
-        <li class="gnavi__list"><a class="gnavi__list_a" href="index.html#mission">会社について</a>
-          <ul class="dropdown__lists">
-            <li class="dropdown__list"><a href="index.html#mission">ミッション</a></li>
-            <li class="dropdown__list"><a href="index.html#services">サービス一覧</a></li>
-            <li class="dropdown__list"><a href="company.html">会社情報</a></li>
-            <li class="dropdown__list"><a href="company.html#members">メンバー紹介</a></li>
-          </ul>
-        </li>
-        <li class="gnavi__list"><a class="gnavi__list_a" href="index.html#services">サービス</a>
-          <ul class="dropdown__lists_3">
-            <li class="dropdown__list"><a href="#">営業代行支援</a></li>
-            <li class="dropdown__list"><a href="#">リードセールス支援</a></li>
-            <li class="dropdown__list"><a href="#">インサイドセールス支援</a></li>
-            <li class="dropdown__list"><a href="#">フィールドセールス支援</a></li>
-            <li class="dropdown__list"><a href="#">セールスコンサルティング支援</a></li>
-            <li class="dropdown__list"><a href="#">セールスマーケティング支援</a></li>
-          </ul>
-        </li>
-        <li><a class="gnavi__list_a" href="index.html#achievements">事例</a></li>
-        <li  class="gnavi__list"><a class="gnavi__list_a" href="contact.html">お問い合わせ</a>
-          <ul class="dropdown__lists_3">
-            <li class="dropdown__list"><a href="contact2.html#">サービス資料</a></li>
-            <li class="dropdown__list"><a href="contact.html#">お問い合わせ</a></li>
-          </ul>
-        </li>
-        <li class="gnavi__list"><a class="gnavi__list_a" href="index.html#blog">BLOG</a>
-          <ul class="dropdown__lists_2">
-            <li class="dropdown__list"><a href="blog.html#">BLOG一覧</a></li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
-    
-    <!---------------レスポンシブナビゲーション------------------> 
-    <span class="nav_toggle"> <i></i> <i></i> <i></i> </span>
-    <nav class="nav">
-      <ul class="nav_menu_ul">
-        <li class="nav_menu_li ac-parent"><a href="index.html#mission">会社について</a>
-        </li>
-		<ul class="ac-child">
-		  <li class="nav_close"><a href="">ミッション</a></li>
-			<li class="nav_close"><a href="">サービス一覧</a></li>
-			<li class="nav_close"><a href="">会社情報</a></li>
-			<li class="nav_close"><a href="">メンバー</a></li>
-		  </ul>  
-		
-        <li class="nav_menu_li ac-parent"><a href="index.html#services">サービス一覧</a></li>
-		 <ul class="ac-child">
-		  <li class="nav_close"><a href="">営業代行支援</a></li>
-			<li class="nav_close"><a href="">リードセールス支援</a></li>
-			<li class="nav_close"><a href="">インサイドセールス支援</a></li>
-			<li class="nav_close"><a href="">フィールドセールス支援</a></li>
-			 <li class="nav_close"><a href="">セールスマーケティング支援</a></li>
-		  </ul> 
-        <li class="nav_menu_li"><a href="contact2.html#">サービス資料</a></li>
-        <li class="nav_menu_li"><a href="contact.html#">お問い合わせ</a></li>
-        <li class="nav_menu_li"><a href="blog.html#">BLOG</a></li>
-      </ul>
-    
-  </div>
-</header>
+
 <!---------------------------------------------->	
 <main>
   <section class="conpany">
@@ -101,7 +34,7 @@
     </div>
 		</div> 
     <!---------------------会社情報------------------------->	
-    <!--<div class="company_wrap">
+    <div class="company_wrap">
       <div class="company_table_wrap">
         <table class="company_table">
           <tr>
@@ -127,6 +60,7 @@
               光触媒コーティングCutalyst販売事業<br>
               光触媒除菌専門店 / プレミアムEXコーティング</td>
           </tr>
+			
           <tr>
             <th>主要取引先</th>
             <td>株式会社2Bbetter / 株式会社スマートサプライ / 有限会社ショウカ</td>
@@ -153,7 +87,7 @@
           </tr>
         </table>
       </div>
-		</div>-->
+		</div>
    <!---------------------レスポンシブ会社情報------------------------->	
     <div class="res_company_wrap">
       <div class="company_table_wrap">
