--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
         <!--<p class="table_title">お問合せ</p>-->
         <form action= "<!--<?php echo esc_url( get_home_url() ); ?>/contactdone/-->" method="post">
           <table class="contact-form">
-            <tr class="inquiry">
+            <!--<tr class="inquiry">
               <th><p>お問合せ種別 <span class="required">必須 </span></p></th>
               <td><label>
                   <input type="radio" name="select" value="お問い合せ" checked="checked" />
@@ -114,7 +114,7 @@
                 <label>
                   <input type="radio" name="select" value="資料請求" />
                   <span>資料請求</span></label></td>
-            </tr>
+            </tr>-->
             <tr>
               <th><p>お名前 <span class="required">必須
                   </span>
