--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     <div><a href="index.html#" class="top_logo"><img src="img/logo.png" alt="株式会社ライジングイノベーション"></a></div>
     <nav class="main_navigation">
       <ul class="flex">
-        <li class="gnavi__list"><a class="gnavi__list_a" href="index.html#mission">会社について</a>
+        <li class="gnavi__list"><a class="gnavi__list_a" href="index.html#mission">会社について<br><span>company</span></a>
           <ul class="dropdown__lists">
-            <li class="dropdown__list"><a href="index.html#mission">ミッション<!--<span class="dropdown__list_en">MISSION</span><br><span class="dropdown__list_jp">ミッション</span>--></a></li>
+            <li class="dropdown__list"><a href="index.html#mission">会社について<!--<span class="dropdown__list_en">MISSION</span><br><span class="dropdown__list_jp">ミッション</span>--></a></li>
             <li class="dropdown__list"><a href="company.html#"><!--<span class="dropdown__list_en">COMPANY</span><br><span class="dropdown__list_jp">会社概要</span>-->会社概要</a></li>
-            <li class="dropdown__list"><a href="company.html#members">メンバー<!--<span class="dropdown__list_en">MEMBERS</span><br><span class="dropdown__list_jp">メンバー</span>--></a></li>
+            <li class="dropdown__list"><a href="company.html#members">メンバー紹介<!--<span class="dropdown__list_en">MEMBERS</span><br><span class="dropdown__list_jp">メンバー</span>--></a></li>
           </ul>
         </li>
-        <li class="gnavi__list"><a class="gnavi__list_a" href="#">サービス</a>
+        <li class="gnavi__list"><a class="gnavi__list_a" href="#">サービス<br><span>services</span></a>
           <ul class="dropdown__lists_3">
 			<li class="dropdown__list"><a href="index.html#services">サービス一覧<!--<span class="dropdown__list_en">SERVICES</span><br><span class="dropdown__list_jp">サービス一覧</span>--></a></li> 
             <li class="dropdown__list"><a href="#">営業代行支援</a></li>
@@ -49,17 +49,18 @@
             <li class="dropdown__list"><a href="#">セールスマーケティング支援</a></li>
           </ul>
         </li>
-        <li><a class="gnavi__list_a" href="index.html#achievements">事例</a></li>
-        <li  class="gnavi__list"><a class="gnavi__list_a" href="contact.html#">お問い合わせ</a>
+        <li><a class="gnavi__list_a" href="index.html#achievements">事例<br><span>case</span></a></li>
+        <li  class="gnavi__list"><a class="gnavi__list_a" href="contact.html#">お問い合わせ<br><span>contact</span></a>
           <ul class="dropdown__lists_3">
-            <li class="dropdown__list"><a href="contact2.html#"><!--<span class="dropdown__list_en">DOCUMENT</span><br><span class="dropdown__list_jp">サービス資料</span>-->サービス資料</a></li>
-            <li class="dropdown__list"><a href="contact.html#"><!--<span class="dropdown__list_en">CONTACT</span><br><span class="dropdown__list_jp">お問合せ</span>-->おい問合せ</a></li>
+			<li class="dropdown__list"><a href="contact.html#"><!--<span class="dropdown__list_en">CONTACT</span><br><span class="dropdown__list_jp">お問合せ</span>-->おい問合せフォーム</a></li>  
+            <li class="dropdown__list"><a href="contact2.html#"><!--<span class="dropdown__list_en">DOCUMENT</span><br><span class="dropdown__list_jp">サービス資料</span>-->サービス資料(無料)</a></li>
+            
           </ul>
         </li>
-        <li class="gnavi__list"><a class="gnavi__list_a" href="#">BLOG</a>
-          <ul class="dropdown__lists_2">
-            <li class="dropdown__list"><a href="blog.html#"><!--<span class="dropdown__list_en">BLOG</span><br><span class="dropdown__list_jp">ブログ一覧</span>-->ブログ一覧</a></li>
-          </ul>
+        <li class="gnavi__list"><a class="gnavi__list_a" href="blog.html#">ブログ<br><span>blog</span></a>
+          <!--<ul class="dropdown__lists_2">
+            <li class="dropdown__list"><a href="blog.html#"><span class="dropdown__list_en">BLOG</span><br><span class="dropdown__list_jp">ブログ一覧</span>ブログ一覧</a></li>
+          </ul>-->
         </li>
       </ul>
     </nav>
@@ -73,23 +74,27 @@
         <li class="nav_menu_li ac-parent"><a href="#">会社について</a>
         </li>
 		<ul class="ac-child">
-		  <li class="nav_close"><a href="index.html#mission">ミッション</a></li>
+		  <li class="nav_close"><a href="index.html#mission">会社について</a></li>
 			<li class="nav_close"><a href="company.html#">会社情報</a></li>
-			<li class="nav_close"><a href="company.html#members">メンバー</a></li>
+			<li class="nav_close"><a href="company.html#members">メンバー紹介</a></li>
 		  </ul>  
 		
         <li class="nav_menu_li ac-parent"><a href="#">サービス一覧</a></li>
 		 <ul class="ac-child">
-			<li class="nav_close"><a href="index.html#services">サービス一覧</a></li> 
+			<li class="nav_close ac_services"><a href="index.html#services">サービス一覧</a></li> 
 		  <li class="nav_close"><a href="">営業代行支援</a></li>
 			<li class="nav_close"><a href="">リードセールス支援</a></li>
 			<li class="nav_close"><a href="">インサイドセールス支援</a></li>
 			<li class="nav_close"><a href="">フィールドセールス支援</a></li>
 			 <li class="nav_close"><a href="">セールスマーケティング支援</a></li>
 		  </ul> 
-        <li class="nav_menu_li"><a href="contact2.html#">サービス資料</a></li>
-        <li class="nav_menu_li"><a href="contact.html#">お問い合わせ</a></li>
-        <li class="nav_menu_li"><a href="blog.html#">BLOG</a></li>
+        <li class="nav_menu_li"><a href="contact2.html#">サービス資料(無料)</a></li>
+        <li class="nav_menu_li"><a href="contact.html#">お問い合わせフォーム</a></li>
+        <li class="nav_menu_li"><a href="blog.html#">ブログ一覧</a><br>
+<br>
+</li>
+		  <li class="nav_menu_li"><br><div class="sns flex jcc"><img src="img/ico-logo-x.png"><img src="img/ico-logo-facebook.png"><img src="img/ico-logo-line.png"></div>
+</li>
       </ul>
 	  </nav>
   </div>
@@ -172,57 +177,17 @@
    <div class="d-demo__wrap">
        <ul class="d-demo__list d-demo__list--left">
            <li class="d-demo__item"><img src="img/logo/loop5.png" alt></li>
-           <li class="d-demo__item"><img src="img/logo/loop1.png" alt></li>
+           <li class="d-demo__item"><img src="img/logo/loop5.png" alt></li>
         </ul>
         <ul class="d-demo__list d-demo__list--left">
            <li class="d-demo__item"><img src="img/logo/loop5.png" alt></li>
-           <li class="d-demo__item"><img src="img/logo/loop1.png" alt></li>
+           <li class="d-demo__item"><img src="img/logo/loop5.png" alt></li>
         </ul>
 <div id="mission"></div>	   
    </div>
  	
 </div> 	  
-    <!--<div class="loop_wrap"> <img src="img/logo/loop3.png"><img src="img/logo/loop4.png"> </div>
-    <div class="loop_wrap"> <img src="img/logo/loop5.png"><img src="img/logo/loop1.png"> </div>-->
-    <!-- <div class="slide">
-      <ul>
-        <li class="scroll-infinity__item"><img src="img/logo/12.svg" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/14.png" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/16.png" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/19.png" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/23.png" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/14.png" /></li>
-      </ul>
-      <ul>
-        <li class="scroll-infinity__item"><img src="img/logo/18.webp" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/20.png" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/27.png" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/24.png" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/23.png" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/16.png" /></li>
-      </ul>
-    </div>
-  
-  <br>
-  <div class="slide">
-   
-      <ul>
-        <li class="scroll-infinity__item"><img src="img/logo/28.svg" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/30.png" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/31.gif" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/3.png" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/5.png" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/21.png" /></li>
-      </ul>
-      <ul>
-        <li class="scroll-infinity__item"><img src="img/logo/25.png" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/29.png" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/32.png" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/9.png" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/5.png" /></li>
-        <li class="scroll-infinity__item"><img src="img/logo/11.webp" /></li>
-      </ul>
-    </div> -->
+    
    
   </section>
   
@@ -327,10 +292,7 @@
             <dd class="services_list_detail inview2"><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span>詳細はコチラ</a></dd>
           </dl>
         </li>
-      </ul>
-      <!-- <div class="button-2">
-        <div class="eff-2"></div>
-        <a href="#"> サービス一覧 </a> </div> --> 
+      </ul> 
     </div>
   </section>
   <div class="sec_2_img"><img src="img/insert_img.png"></div>
@@ -427,9 +389,14 @@
       <p class="contact_title_1">CONTACT</p>
       <p class="contact_title_2">お問い合わせ</p>
       <br>
+		<div class="flex">
       <div class="contact_btn">
         <div class="eff-contact"></div>
-        <a href="contact.html#">お問い合わせページ</a></div>
+        <a href="contact.html#">営業のご相談(無料)</a></div>
+		<div class="contact_btn">
+        <div class="eff-contact"></div>
+        <a href="contact.html#">サービス資料(無料)</a></div>
+		</div>	
       <!---------------レスポンシブTOPコンタクト------------------>
       <div class="res_btn_wrap"><a class="res_top_btn2" href="contact.html#">営業のご相談(無料)</a><a class="res_top_btn2" href="contact2.html#">サービス資料(無料)</a></div>
     </div>
@@ -444,6 +411,7 @@
         <li>〒531-0072</li>
         <li>大阪市北区豊崎3-15-5 TKビル2F</li>
         <li>TEL：050-7586-3360</li>
+		<li><div class="sns flex"><img src="img/ico-logo-x.png"><img src="img/ico-logo-facebook.png"><img src="img/ico-logo-line.png"></div></li>  
       </ul>
     </div>
     <div class="flex footer_list">
