--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <div class="navigation"> <a href="contact.html#"><img src="img/icon_mail.png"></a> <span class="nav_toggle"> <i></i> <i></i> <i></i> </span></div>
 <nav class="nav" id="nav">
   <ul class="nav_menu_ul">
-    <li class="nav_menu_li"><a href="#"><span>HOME</span><br>
+    <li class="nav_menu_li"><a href="#" class="hov-child__"><span>HOME</span><br>
       トップページ</a></li>
   </ul>
   <ul class="nav_menu_ul nav_menu_ul3 flex">
