--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <div class="navigation"> <a href="contact.html#"><img src="img/icon_mail.png"></a> <span class="nav_toggle"> <i></i> <i></i> <i></i> </span></div>
 <nav class="nav" id="nav">
   <ul class="nav_menu_ul">
-    <li class="nav_menu_li"><a href="#" class="hov-child__"><span>HOME</span><br>
+    <li class="nav_menu_li"><a href="index.html#" class="hov-child__"><span>HOME</span><br>
       トップページ</a></li>
   </ul>
   <ul class="nav_menu_ul nav_menu_ul3 flex">
@@ -92,9 +92,9 @@
         会社について</a>
         <div class="hov-child1">
           <ul>
-            <li><a href="index.html#mission" class="hov-child__">会社について</a></li>
-            <li><a href="company.html#">会社情報</a></li>
-            <li><a href="company.html#members">メンバー紹介</a></li>
+            <li><a href="index.html#mission" class="hov-child__"><span><img src="img/icon_arrow2.png" class="arrow"></span>会社について</a></li>
+            <li><a href="company.html#"><span><img src="img/icon_arrow2.png" class="arrow"></span>会社情報</a></li>
+            <li><a href="company.html#members"><span><img src="img/icon_arrow2.png" class="arrow"></span>メンバー紹介</a></li>
           </ul>
         </div>
       </li>
@@ -109,16 +109,20 @@
       <li class="nav_menu_li hov-parent2" id="js-hover2"><a href="#"><span>SURVISE</span><br>
         サービス一覧</a>
         <div class="hov-child2">
-          <ul>
-            <li><a href="index.html#services" class="hov-child__">サービス一覧</a></li>
-            <li><a href="">営業代行支援</a></li>
-            <li><a href="">リードセールス支援</a></li>
-            <li><a href="">インサイドセールス支援</a></li>
-            <li><a href="">フィールドセールス支援</a></li>
-            <li><a href="">セールスマーケティング支援</a></li>
+          <ul class="fl">
+            <li><a href="index.html#services" class="hov-child__"><span><img src="img/icon_arrow2.png" class="arrow arrow6"></span>サービス一覧</a></li>
+            <li><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span>営業代行支援</a></li>
+            <li><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span>リードセールス支援</a></li>
+            <li><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span>インサイドセールス支援</a></li>
+          </ul>
+			<ul class="fl">
+            <li><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span>インサイドセールス支援</a></li>
+            <li><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span>フィールドセールス支援</a></li>
+            <li><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span>セールスマーケティング支援</a></li>	
           </ul>
         </div>
       </li>
+		<div style="clear: both;"></div>
       <!--<ul class="ac-child flex">
           <li class="nav_close ac_services"><a href="index.html#services">サービス一覧</a></li>
           <li class="nav_close"><a href="">営業代行支援</a></li>
@@ -133,9 +137,9 @@
     </li>
   </ul>
   <ul class="nav_menu_ul nav_menu_ul2 flex">
-    <li class="nav_menu_li"><a href="contact2.html#"><span>DOCUMENT</span><br>
+    <li class="nav_menu_li"><a href="contact2.html#"><span class="green_text">DOCUMENT</span><br>
       サービス資料(無料)</a></li>
-    <li class="nav_menu_li"><a href="contact.html#"><span>CONTACT</span><br>
+    <li class="nav_menu_li"><a href="contact.html#"><span class="green_text">CONTACT</span><br>
       お問い合わせフォーム</a></li>
   </ul>
   <div class="sns sns_nav flex jcc"><img src="img/ico-logo-x.png"><img src="img/ico-logo-facebook.png"><img src="img/ico-logo-line.png"> </div>
@@ -230,15 +234,17 @@
     <div id="mission"></div>
   </section>
   
-  <!---------------TOP会社紹介会社情報ミッション------------------>
-<div class="box">
+<!---------------TOP会社紹介会社情報ミッション------------------>
+<!---------スクロールダウンアニメ------------>
+	<div class="box">
   <div class="arrowWrap">
     <div class="arrowInner">
-      <p>SCROLL DOWN</p>
+      <p>READ MORE</p>
       <div class="arrow4"></div>
     </div>
   </div>
-</div>	
+</div>
+<!---------スクロールダウンアニメ------------>	
   <section class="sec_3 inview">
     <div class="sec_3_wrap">
       <div class="sec_title title_sec3">
@@ -298,7 +304,7 @@
             <dt class="services_img"><img src="img/bunner1.png" /></dt>
             <dt class="inview2">営業代行支援</dt>
             <dd class="inview2">テキストテキストテキストテキストテキストテキストテキスト</dd>
-            <dd class="services_list_detail inview2"><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span>view more</a></dd>
+            <dd class="services_list_detail inview2"><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span><span class="marker">view more</span></a></dd>
           </dl>
         </li>
         <li>
@@ -306,7 +312,7 @@
             <dt class="services_img"><img src="img/bunner2.png" /></dt>
             <dt class="inview2">リードセールス支援</dt>
             <dd class="inview2">テキストテキストテキストテキストテキストテキストテキスト</dd>
-            <dd class="services_list_detail inview2"><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span>view more</a></dd>
+            <dd class="services_list_detail inview2"><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span><span class="marker">view more</span></a></dd>
           </dl>
         </li>
         <li>
@@ -314,7 +320,7 @@
             <dt class="services_img"><img src="img/bunner3.png" /></dt>
             <dt class="inview2">インサイドセールス支援</dt>
             <dd class="inview2">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</dd>
-            <dd class="services_list_detail inview2"><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span>view more</a></dd>
+            <dd class="services_list_detail inview2"><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span><span class="marker">view more</span></a></dd>
           </dl>
         </li>
         <li>
@@ -322,7 +328,7 @@
             <dt class="services_img"><img src="img/bunner3.png" /></dt>
             <dt class="inview2">フィールドセールス支援</dt>
             <dd class="inview2">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</dd>
-            <dd class="services_list_detail inview2"><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span>view more</a></dd>
+            <dd class="services_list_detail inview2"><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span><span class="marker">view more</span></a></dd>
           </dl>
         </li>
         <li>
@@ -330,7 +336,7 @@
             <dt class="services_img"><img src="img/bunner3.png" /></dt>
             <dt class="inview2">セールスコンサルティング</dt>
             <dd class="inview2">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</dd>
-            <dd class="services_list_detail inview2"><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span>view more</a></dd>
+            <dd class="services_list_detail inview2"><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span><span class="marker">view more</span></a></dd>
           </dl>
         </li>
         <li>
@@ -338,7 +344,7 @@
             <dt class="services_img"><img src="img/bunner3.png" /></dt>
             <dt class="inview2">セールスマーケティング支援</dt>
             <dd class="inview2">テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</dd>
-            <dd class="services_list_detail inview2"><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span>view more</a></dd>
+            <dd class="services_list_detail inview2"><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span><span class="marker">view more</span></a></dd>
           </dl>
         </li>
       </ul>
