--- a/topics.html
+++ b/topics.html
@@ -125,129 +125,66 @@
 </header>
 <!---------------------------------------------->
 <main>
-  <section class="contact_page">
-    <div class="page_title_wrap">
-      <div class="page_title">
-        <p class="page_title_en">DOCUMENT</p>
-        <h2 class="page_title_ja">サービス資料</h2>
-      </div>
-    </div>
-    <div class="company_wrap contact_wrap">
-      <div class="company_table_wrap"> 
-        <!--<p class="table_title">お問合せ</p>-->
-        
-        <div class="download_wrap">
-          <div class="download_img"><img src="img/image.png"></div>
-        </div>
-        <form action= "<!--<?php echo esc_url( get_home_url() ); ?>/contactdone/-->" method="post">
-          <table class="contact-form">
-            <!--<tr class="inquiry">
-              <th><p>お問合せ種別
-                <span class="required">必須
-                </span></p></th>
-              <td><label>
-                  <input class="form_txt" type="radio" name="select" value="お問い合せ" checked="checked" />
-                  <span>お問い合せ</span></label>
-                <br>
-                <label>
-                  <input type="radio" name="select" value="資料請求" />
-                  <span>資料請求</span></label></td>
-            </tr>-->
-            <tr>
-              <th><p>お名前 <span class="required">必須
-                  </spanp>
-                </p></th>
-              <td><input class="form_txt" type="text" name="your-name" value="" size="40" class="" aria-required="true" aria-invalid="false" placeholder="例）山田 太郎" required/></td>
-            </tr>
-            <tr>
-              <th><p>フリガナ <span class="required">必須
-                  </spanp>
-                </p></th>
-              <td><input class="form_txt" type="text" name="your-furigana" value="" size="40" class="" aria-required="true" aria-invalid="false" placeholder="例）ヤマダ タロウ" required/></td>
-            </tr>
-            <tr>
-              <th><p>電話番号</p></th>
-              <td><input class="form_txt" type="tel" name="your-tel" value="" size="40" class="" aria-invalid="false" placeholder="例）050-0000-0000" /></td>
-            </tr>
-            <tr>
-              <th><p>メールアドレス <span class="required">必須</span></p>
-              </th>
-              <td><input class="form_txt" type="email" name="your-email" value="" size="40" class="" aria-required="true" aria-invalid="false" placeholder="例）sample@torat.jp" required/></td>
-            </tr>
-            <tr>
-              <th><p>お問い合わせ内容 <span class="required">必須</p>
-                </spanp></th>
-              <td><textarea name="your-message" cols="40" rows="10" class="" aria-required="true" aria-invalid="false" placeholder="" required></textarea></td>
-            </tr>
-          </table>
-          <p class="btn-check">
-            <input type="checkbox" name="acceptance" value="1" aria-invalid="false" class="spam1" required/>
-            &emsp;<a href=""><u>規約</u></a>に同意し、チェックを入れてください。<br />
-            <input type="submit" value="ダウンロード画面へ" class="form_btn" id="formbtn"  onclick="location.href='bownload.html'" />
-          </p>
-        </form>
-      </div>
-    </div>
-    <!---------------------レスポンシブ------------------------->
-    
-    <div class="res_contact_wrap">
-      <div class="res_download_img"><img src="img/image.png"></div>
-      <form action= "<!--<?php echo esc_url( get_home_url() ); ?>/contactdone/-->" method="post">
-        <ul class="res_contact-form">
-        <!--<li><p>お問合せ種別</p><span class="required">必須</span></li>--> 
-        <!--<li>
-          <label>
-            <input type="radio" name="select" value="お問い合せ" checked="checked" />
-            <span>お問い合せ</span></label>
-          <label>
-            <input type="radio" name="select" value="資料請求" />
-            <span>資料請求</span></label>
-        </li>-->
-        <li>
-          <p>お名前</p>
-          <span class="required">必須 </span> </li>
-        <li>
-          <input class="res_form_txt" type="text" name="your-name" value="" size="40" class="" aria-required="true" aria-invalid="false" placeholder="例）山田 太郎" required/>
-        </li>
-        <li class="contact_margin"></li>
-        <li>
-          <p>フリガナ</p>
-          <span class="required">必須</span> </li>
-        <li>
-          <input class="res_form_txt" type="text" name="your-furigana" value="" size="40" class="" aria-required="true" aria-invalid="false" placeholder="例）ヤマダ タロウ" required/>
-        </li>
-        <li class="contact_margin"></li>
-        <li class="contact_margin"></li>
-        <li>
-          <p>電話番号</p>
-        </li>
-        <li>
-          <input class="res_form_txt" type="tel" name="your-tel" value="" size="40" class="" aria-invalid="false" placeholder="例）050-0000-0000" />
-        </li>
-        <li class="contact_margin"></li>
-        <li>
-          <p>メールアドレス</p>
-          <span class="required">必須 </span> </li>
-        <li>
-          <input class="res_form_txt" type="email" name="your-email" value="" size="40" class="" aria-required="true" aria-invalid="false" placeholder="例）sample@torat.jp" required/>
-        </li>
-        <li class="contact_margin"></li>
-        <li>
-          <p>お問い合わせ内容</p>
-          <span class="required">必須 </span> </li>
-        <li>
-          <textarea name="your-message" cols="40" rows="10" class="" aria-required="true" aria-invalid="false" placeholder="" required></textarea>
-        </li>
-        <div class="btn-check">
-          <input type="checkbox" name="acceptance" value="1" aria-invalid="false" class="spam1" required/>
-          &emsp;<a href=""><u>規約</u></a>に同意し、チェックを入れてください。<br />
-          <input type="submit" value="ダウンロード画面へ" class="form_btn_2" id="formbtn" />
-        </div>
-      </form>
-    </div>
-    </div>
-    <div class="sec_2_img"><img src="img/insert_img3.png"></div>
-  </section>
+<section class="topics">
+<div class="page_title_wrap">
+  <div class="page_title">
+    <p class="page_title_en">TOPICS</p>
+    <h2 class="page_title_ja">トピックス一覧</h2>
+  </div>
+</div>
+<div class="topics_wrap">
+  <ul class="product-list">
+    <li> <a href="#"> <img src="img/image.png" alt="">
+      <p>テキストテキスト</p>
+      <p>yyyy/mm/dd</p>
+      </a> </li>
+    <li> <a href="#"> <img src="img/image.png" alt="">
+      <p>テキストテキスト</p>
+      <p>yyyy/mm/dd</p>
+      </a> </li>
+    <li> <a href="#"> <img src="img/image.png" alt="">
+      <p>テキストテキスト</p>
+      <p>yyyy/mm/dd</p>
+      </a> </li>
+    <li> <a href="#"> <img src="img/image.png" alt="">
+      <p>テキストテキスト</p>
+      <p>yyyy/mm/dd</p>
+      </a> </li>
+    <li> <a href="#"> <img src="img/image.png" alt="">
+      <p>テキストテキスト</p>
+      <p>yyyy/mm/dd</p>
+      </a> </li>
+    <li> <a href="#"> <img src="img/image.png" alt="">
+      <p>テキストテキスト</p>
+      <p>yyyy/mm/dd</p>
+      </a> </li>
+    <li> <a href="#"> <img src="img/image.png" alt="">
+      <p>テキストテキスト</p>
+      <p>yyyy/mm/dd</p>
+      </a> </li>
+    <li> <a href="#"> <img src="img/image.png" alt="">
+      <p>テキストテキスト</p>
+      <p>yyyy/mm/dd</p>
+      </a> </li>
+    <li> <a href="#"> <img src="img/image.png" alt="">
+      <p>テキストテキスト</p>
+      <p>yyyy/mm/dd</p>
+      </a> </li>
+    <li> <a href="#"> <img src="img/image.png" alt="">
+      <p>テキストテキスト</p>
+      <p>yyyy/mm/dd</p>
+      </a> </li>
+    <li> <a href="#"> <img src="img/image.png" alt="">
+      <p>テキストテキスト</p>
+      <p>yyyy/mm/dd</p>
+      </a> </li>
+  </ul>
+  <ul class="pagination">
+    <li>1</li>
+    <li><a href="products2.html">2</a></li>
+  </ul>
+</div>
+</main>
 </main>
 <!---------------------フッター------------------------->
 <footer>
