--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
 <!-------------------------------->
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">	
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
 <!-------------------------------->
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1&display=swap" rel="stylesheet">
-<!------------------------------------------------------------->	
+<!------------------------------------------------------------->
 <link href="css/style.css" rel="stylesheet" type="text/css" media="screen and (min-width:500px)">
 <link href="css/responsive.css" rel="stylesheet" type="text/css"  media="screen and (max-width:501px)">
 <!------------------------------------------------------------->
@@ -38,10 +38,10 @@
 <div class="nav_bg"></div>
 <header>
 <div class="flex header_wrap">
-<div><a href="index.html#" class="top_logo"><img src="img/Rising innovation.png" alt="株式会社ライジングイノベーション"></a></div>
+<div><a href="index.html#" class="top_logo"><img src="img/logo_2.png" alt="株式会社ライジングイノベーション"></a></div>
 <!---------------ナビゲーション------------------>
 <div class="navigation"> <a href="contact.html#"><img src="img/icon_mail.png"></a> <span class="nav_toggle"> <i></i> <i></i> <i></i> </span></div>
-<nav class="nav" id="nav"> <a class="logo3"><strong>RISING INNOVATION</strong></a>
+<nav class="nav" id="nav"> <a class="logo3"><img src="img/logo_2.png"></a>
   <div class="nav_wrap">
     <ul class="nav_menu_ul nav_menu_ul2 flex">
       <li class="nav_menu_li"><a href="index.html#" class="hov-child__"> <span>HOME</span><br>
@@ -178,6 +178,7 @@
         <li><img src="img/imitsu2.png" class="aimitu_img"></li>
       </ul>
     </div>
+    <a class="prtimes_img_link" href="https://sales.rising-innovation.co.jp/prtimes/" target="_blank"><img src="img/PR TIMES.jpeg" class="prtimes_img"></a>
     <div class="clear"></div>
     <p class="award_text">数ある営業代行会社の中から受賞した高い実績がございます。<br>
       質の高いサービスをご提供致します。</p>
@@ -187,7 +188,7 @@
 
 <section class="sec_1 sec_suppliers">
   <div class="sec_title_5">
-    <p class="sec_title_6" style="font-size:1.4rem; ">取引先一覧</p>
+    <p class="sec_title_6" style="font-size:1.4rem; ">支援実績</p>
   </div>
   <div class="d-demo">
     <div class="d-demo__wrap">
@@ -217,11 +218,11 @@
     <div class="d-demo__wrap">
       <ul class="d-demo__list d-demo__list--left">
         <li class="d-demo__item"><img src="img/logo/loop5.png" alt></li>
-        <li class="d-demo__item"><img src="img/logo/loop1.png" alt></li>
+        <li class="d-demo__item"><img src="img/logo/loop6.png" alt></li>
       </ul>
       <ul class="d-demo__list d-demo__list--left">
         <li class="d-demo__item"><img src="img/logo/loop5.png" alt></li>
-        <li class="d-demo__item"><img src="img/logo/loop1.png" alt></li>
+        <li class="d-demo__item"><img src="img/logo/loop6.png" alt></li>
       </ul>
     </div>
   </div>
@@ -232,7 +233,7 @@
   <div class="sec_problem_wrap">
     <div class="sec_problem_wrap__">
       <div class="sec_title_5">
-        <p class="sec_title_3 ttl_3d2">こんな課題はございませんか？</p>
+        <p class="sec_title_3 ttl_3d2">こんな営業課題はございませんか？</p>
       </div>
       <ul class="inview2">
         <li>
@@ -265,7 +266,7 @@
   <div class="chevron"></div>
   <div class="chevron"></div>
 </div>
-<!---------スクロールダウンアニメ(サイド)------------>
+<!---------スクロールダウンアニメ(サイド)------------> 
 <!--<div class="box">
   <div class="arrowWrap">
     <div class="arrowInner">
@@ -273,16 +274,18 @@
       <div class="arrow4"></div>
     </div>
   </div>
-</div>-->
+</div>--> 
 <!---------スクロールダウンアニメ------------> 
 <!---------------問題解決セクション------------------>
 <section class="sec_reason inview">
 <div class="sec_reason_wrap">
-<!---------私たちにお任せください------------>
+<!---------我々が全て解決致します------------>
 <div class="tac">
-  <p class="sec_title_6 sec_title_ul invew">私たちにお任せください。</p>
+  <p class="sec_title_6 sec_title_ul invew">我々が全て解決致します。</p>
   <figure class="title_bg_img6"></figure>
-  <p class="sec_text_1"><b>クライアント専属の営業チームを構築させアウトバウンド領域でリード獲得からクロージングまで<br>全てワンストップで営業課題をご支援。<br>唯一無二の営業チームで企業のビジネスをフルサポート致します。</b></p>
+  <p class="sec_text_1"><b>クライアント専属の営業チームを構築させアウトバウンド領域でリード獲得からクロージングまで<br>
+    全てワンストップで営業課題をご支援。<br>
+    唯一無二の営業チームで企業のビジネスをフルサポート致します。</b></p>
 </div>
 <br>
 <br>
@@ -292,37 +295,38 @@
       <p class="reason_number_2"><span>POINT</span><br>
         01</p>
       <img src="img/icon_contract.png" style="width: 110px;top:65px;" ></div>
-	  <p class="point_1"><span class="marker_2 js-markerScrollAnimation">唯一無二の強力</span>なセールスの構築</p>
+    <p class="point_1"><span class="marker_2 js-markerScrollAnimation">クライアント専属の営業チームを構築</p>
   </li>
   <li class="inview">
     <div>
       <p class="reason_number_2"><span>POINT</span><br>
         02</p>
       <img src="img/icon_cycle.png" ></div>
-    <p class="point_2">課題解決の<span class="marker_2 js-markerScrollAnimation">可視化×実行×改善×PDCA業務</span>のリソース解消</p>
+    <p class="point_2"><span class="marker_2 js-markerScrollAnimation">最短最速で新規開拓をご支援</span></p>
   </li>
-  <li class="inview">
+  
+</ul>
+<ul class="sec_reason_1wr flex jcc">
+	<li class="inview">
     <div>
       <p class="reason_number_2"><span>POINT</span><br>
         03</p>
       <img src="img/icon_graph.png" ></div>
-    <p class="point_3"><span class="marker_2 js-markerScrollAnimation">売上拡大、販路拡大、新規開拓</span>の早期回収</p>
+    <p class="point_3">リードセールス、クロージングセールス、コアセールスと<br><span class="marker_2 js-markerScrollAnimation">案件に応じて専門スタッフをアサイン</span></p>
   </li>
-</ul>
-<ul class="sec_reason_1wr flex jcc">
   <li class="inview">
     <div>
       <p class="reason_number_2"><span>POINT</span><br>
         04</p>
       <img src="img/icon_light.png" style="width: 70px;"></div>
-    <p class="point_4"><span class="marker_2 js-markerScrollAnimation">営業リソースに困らない</span>雇用・営業職の課題解決</p>
+    <p class="point_4">営業戦略策定～アプローチリスト準備、スクリプト構築まで<br><span class="marker_2 js-markerScrollAnimation">事前準備は丸投げ</span></p>
   </li>
   <li class="inview">
     <div>
       <p class="reason_number_2"><span>POINT</span><br>
         05</p>
       <img src="img/icon_tel.png"></div>
-    <p class="point_5">インバウンド型集客では達成不可能な領域が<span class="marker_2 js-markerScrollAnimation">アウトバウンドで実現可能</span></p>
+    <p class="point_5">KPIマネジメント、行動管理、架電データなどは<span class="marker_2 js-markerScrollAnimation">CTI、SFAで可視化</span></p>
   </li>
 </ul>
 </section>
@@ -344,7 +348,7 @@
             01</p>
           <img src="img/circle_img1.jpeg" class="circle_img"></div>
         <div>
-			<p class="wb"><span class="marker_3 js-markerScrollAnimation">営業に特化したトップセールスが多数在籍。</span></p>
+          <p class="wb"><span class="marker_3 js-markerScrollAnimation">営業に特化したトップセールスが多数在籍。</span></p>
         </div>
       </li>
       <li class="point inview">
@@ -600,7 +604,9 @@
 <div class="inview2 flex res_mission_flex">
   <div class="mission_img"><img src="img/misson_img.png"></div>
   <div class="sec_reason_text">
-    <h3 class="sec_reason_h3">我々はアウトバウンド営業に<br>専門特価した、<br>プロフェッショナル集団です。</h3>
+    <h3 class="sec_reason_h3">我々はアウトバウンド営業に<br>
+      専門特価した、<br>
+      プロフェッショナル集団です。</h3>
     <h3 class="res_sec_reason_h3">我々はアウトバウンド営業に専門特価したプロフェッショナル集団です。</h3>
     <div id="services"></div>
     <p><span class="marker_2 js-markerScrollAnimation">あらゆる業界の営業課題を最短最速でご支援する事がミッションでございます。</span>リードセールス、クロージングセールス、営業組織立上げまで一気通貫でご依頼頂く事が可能でございます。<span class="marker_2 js-markerScrollAnimation">「営業」で人と企業をツナグ架け橋となるようにクライアントの皆様方のサービスをスケールさせるお手伝いをさせてください。</span></p>
