--- a/contact2.html
+++ b/contact2.html
@@ -5,7 +5,7 @@
 <title>株式会社RISING INNOVATION – 株式会社RISING INNOVATION は人と未来をツナグ会社です。</title>
 <meta name="description" content="テキストテキストテキストテキストテキストテキストテキストテキスト">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" href="img/logo.png">
+<link rel="icon" href="img/logo_2.png">
 <!--------------フォント------------------>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,10 +35,10 @@
 <div class="nav_bg"></div>
 <header>
 <div class="flex header_wrap">
-<div><a href="index.html#" class="top_logo"><img src="img/Rising innovation.png" alt="株式会社ライジングイノベーション"></a></div>
+<div><a href="index.html#" class="top_logo"><img src="img/logo_2.png" alt="株式会社ライジングイノベーション"></a></div>
 <!---------------ナビゲーション------------------>
 <div class="navigation"> <a href="contact.html#"><img src="img/icon_mail.png"></a> <span class="nav_toggle"> <i></i> <i></i> <i></i> </span></div>
-<nav class="nav" id="nav"> <a class="logo3"><strong>RISING INNOVATION</strong></a>
+<nav class="nav" id="nav"> <a class="logo3"><img src="img/logo_2.png" class="nav_logo"></a>
   <div class="nav_wrap">
     <ul class="nav_menu_ul nav_menu_ul2 flex">
       <li class="nav_menu_li"><a href="index.html#" class="hov-child__"> <span>HOME</span><br>
@@ -132,12 +132,12 @@
         <h2 class="page_title_ja">サービス資料</h2>
       </div>
     </div>
-    <div class="company_wrap contact_wrap">
-      <div class="company_table_wrap"> 
+    <div class="contact_wrap">
+      <div class="contact_table_wrap"> 
         <!--<p class="table_title">お問合せ</p>-->
         
         <div class="download_wrap">
-          <div class="download_img"><img src="img/image.png"></div>
+          <div class="download_img"><img src="img/document.png"></div>
         </div>
         <form action= "<!--<?php echo esc_url( get_home_url() ); ?>/contactdone/-->" method="post">
           <table class="contact-form">
