--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>株式会社RISING INNOVATION – 株式会社RISING INNOVATION は人と未来をツナグ会社です。</title>
 <meta name="description" content="テキストテキストテキストテキストテキストテキストテキストテキスト">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="icon" href="img/logo.png">
+<link rel="icon" href="img/logo_2.png">
 <!--------------フォント------------------>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +41,7 @@
 <div><a href="index.html#" class="top_logo"><img src="img/logo_2.png" alt="株式会社ライジングイノベーション"></a></div>
 <!---------------ナビゲーション------------------>
 <div class="navigation"> <a href="contact.html#"><img src="img/icon_mail.png"></a> <span class="nav_toggle"> <i></i> <i></i> <i></i> </span></div>
-<nav class="nav" id="nav"> <a class="logo3"><img src="img/logo_2.png"></a>
+<nav class="nav" id="nav"> <a class="logo3"><img src="img/logo_2.png" class="nav_logo"></a>
   <div class="nav_wrap">
     <ul class="nav_menu_ul nav_menu_ul2 flex">
       <li class="nav_menu_li"><a href="index.html#" class="hov-child__"> <span>HOME</span><br>
@@ -205,11 +205,11 @@
   <div class="d-demo">
     <div class="d-demo__wrap">
       <ul class="d-demo__list d-demo__list--left">
-        <li class="d-demo__item"><img src="img/logo/loop3.png" alt></li>
+        <li class="d-demo__item"><img src="img/logo/loop5.png" alt></li>
         <li class="d-demo__item"><img src="img/logo/loop4.png" alt></li>
       </ul>
       <ul class="d-demo__list d-demo__list--left">
-        <li class="d-demo__item"><img src="img/logo/loop3.png" alt></li>
+        <li class="d-demo__item"><img src="img/logo/loop5.png" alt></li>
         <li class="d-demo__item"><img src="img/logo/loop4.png" alt></li>
       </ul>
     </div>
@@ -217,11 +217,11 @@
   <div class="d-demo">
     <div class="d-demo__wrap">
       <ul class="d-demo__list d-demo__list--left">
-        <li class="d-demo__item"><img src="img/logo/loop5.png" alt></li>
+        <li class="d-demo__item"><img src="img/logo/loop3.png" alt></li>
         <li class="d-demo__item"><img src="img/logo/loop6.png" alt></li>
       </ul>
       <ul class="d-demo__list d-demo__list--left">
-        <li class="d-demo__item"><img src="img/logo/loop5.png" alt></li>
+        <li class="d-demo__item"><img src="img/logo/loop3.png" alt></li>
         <li class="d-demo__item"><img src="img/logo/loop6.png" alt></li>
       </ul>
     </div>
@@ -283,14 +283,13 @@
 <div class="tac">
   <p class="sec_title_6 sec_title_ul invew">我々が全て解決致します。</p>
   <figure class="title_bg_img6"></figure>
-  <p class="sec_text_1"><b>クライアント専属の営業チームを構築させアウトバウンド領域でリード獲得からクロージングまで<br>
-    全てワンストップで営業課題をご支援。<br>
-    唯一無二の営業チームで企業のビジネスをフルサポート致します。</b></p>
+  <p class="sec_text_1"><b>クライアント専属の営業チームを構築させアウトバウンド領域でリード獲得からクロージングまで全てワンストップで営業課題をご支援。唯一無二の営業チームでビジネスをフルサポート致します。</b></p>
 </div>
 <br>
 <br>
 <ul class="sec_reason_1wr flex jcc">
   <li class="inview">
+	  <img class="check_icon" src="img/icon_check.png">
     <div>
       <p class="reason_number_2"><span>POINT</span><br>
         01</p>
@@ -298,6 +297,7 @@
     <p class="point_1"><span class="marker_2 js-markerScrollAnimation">クライアント専属の営業チームを構築</p>
   </li>
   <li class="inview">
+	  <img class="check_icon" src="img/icon_check.png">
     <div>
       <p class="reason_number_2"><span>POINT</span><br>
         02</p>
@@ -308,25 +308,29 @@
 </ul>
 <ul class="sec_reason_1wr flex jcc">
 	<li class="inview">
+		<img class="check_icon" src="img/icon_check.png">
     <div>
       <p class="reason_number_2"><span>POINT</span><br>
         03</p>
       <img src="img/icon_graph.png" ></div>
-    <p class="point_3">リードセールス、クロージングセールス、コアセールスと<br><span class="marker_2 js-markerScrollAnimation">案件に応じて専門スタッフをアサイン</span></p>
+    <p class="point_3">リードセール スクロージングセールス コアセールス<br>
+      <span class="marker_2 js-markerScrollAnimation">案件に応じてプロの専門スタッフをアサイン</span></p>
   </li>
   <li class="inview">
+	  <img class="check_icon" src="img/icon_check.png">
     <div>
       <p class="reason_number_2"><span>POINT</span><br>
         04</p>
       <img src="img/icon_light.png" style="width: 70px;"></div>
-    <p class="point_4">営業戦略策定～アプローチリスト準備、スクリプト構築まで<br><span class="marker_2 js-markerScrollAnimation">事前準備は丸投げ</span></p>
+    <p class="point_4">営業戦略策定 アプローチリスト準備 スクリプト構築まで<br><span class="marker_2 js-markerScrollAnimation">事前構築は全てお任せください</span></p>
   </li>
   <li class="inview">
+	  <img class="check_icon" src="img/icon_check.png">
     <div>
       <p class="reason_number_2"><span>POINT</span><br>
         05</p>
       <img src="img/icon_tel.png"></div>
-    <p class="point_5">KPIマネジメント、行動管理、架電データなどは<span class="marker_2 js-markerScrollAnimation">CTI、SFAで可視化</span></p>
+    <p class="point_5">KPIマネジメント 行動管理 架電データなどは<br><span class="marker_2 js-markerScrollAnimation">CTI・SFAで可視化</span></p>
   </li>
 </ul>
 </section>
@@ -444,6 +448,8 @@
           <dd class="services_list_detail inview2"><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span><span class="marker">view more</span></a></dd>
         </dl>
       </li>
+	  </ul>
+	  <ul class="services_list">
       <li>
         <dl>
           <dt class="services_img"><img src="img/bunner3.png" /></dt>
@@ -460,6 +466,8 @@
           <dd class="services_list_detail inview2"><a href=""><span><img src="img/icon_arrow2.png" class="arrow"></span><span class="marker">view more</span></a></dd>
         </dl>
       </li>
+		  </ul>
+	  <ul class="services_list">
       <li>
         <dl>
           <dt class="services_img"><img src="img/bunner3.png" /></dt>
