--- a/topics.html
+++ b/topics.html
@@ -35,10 +35,10 @@
 <div class="nav_bg"></div>
 <header>
 <div class="flex header_wrap">
-<div><a href="index.html#" class="top_logo"><img src="img/Rising innovation.png" alt="株式会社ライジングイノベーション"></a></div>
+<div><a href="index.html#" class="top_logo"><img src="img/logo_2.png" alt="株式会社ライジングイノベーション"></a></div>
 <!---------------ナビゲーション------------------>
 <div class="navigation"> <a href="contact.html#"><img src="img/icon_mail.png"></a> <span class="nav_toggle"> <i></i> <i></i> <i></i> </span></div>
-<nav class="nav" id="nav"> <a class="logo3"><strong>RISING INNOVATION</strong></a>
+<nav class="nav" id="nav"> <a class="logo3"><img src="img/logo_2.png" class="nav_logo"></a>
   <div class="nav_wrap">
     <ul class="nav_menu_ul nav_menu_ul2 flex">
       <li class="nav_menu_li"><a href="index.html#" class="hov-child__"> <span>HOME</span><br>
